--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0.5rem 0 2.5rem;
 }
 
 .header-logo {
@@ -59,7 +60,7 @@ header {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 480px;
+    height: 520px;
     padding: 0.5rem 1rem;
     margin: 1.6rem 0;
 }
@@ -100,7 +101,7 @@ header {
     width: 85%;
     height: auto;
     border-radius: 5px;
-    margin: 10px 0;
+    margin: 30px 0;
 }
 
 .inicio-carrossel-linha {
