--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,43 @@ header {
     transform: skewX(-50deg);
     margin: 1rem auto;
 }
+
+
+/* SOBRE */
+
+.sobre {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 100%;
+    height: 520px;
+    margin: 1rem 0;
+}
+
+.sobre-foto {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    margin: 1rem 0;
+}
+
+.sobre-foto>img {
+    width: 75%;
+    height: 350px;
+    object-fit: cover;
+    margin: 30px 0;
+    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.50);
+}
+
+.sobre-texto {
+    color: #000000;
+    font-size: 14px;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 1.3rem;
+    width: 70%;
+}
+
+.sobre-texto p {
+    margin: 1rem 0;
+}
