--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     --fundo-principal: #fff;
     --fundo-secundario: #fff;
     --branco: #fff;
-    --linhas: #000;
+    --linhas: #f0f0f0;
     --texto: #000;
     --texto-leve: #888;
     --sombra: rgba(0, 0, 0, 0.5);
@@ -35,11 +35,19 @@ section {
 /* CABEÇALHO */
 
 header {
+    background: var(--fundo-principal);
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: var(--linhas) 1px solid;
+    position: sticky;
+    top: 0;
     margin: 0.5rem 0 2.5rem;
+    width: 100%;
 }
+
+
+/* LOGO */
 
 .header-logo {
     background: rgba(0, 0, 0, 0.06);
@@ -57,10 +65,69 @@ header {
     transform: translate(-2px, 2px);
 }
 
+
+/* MENU */
+
 .header-menu {
-    font-size: 40px;
+    font-size: 2.5rem;
     padding: 15px;
     margin: 0.3rem;
+}
+
+#menu-icon {
+    cursor: pointer;
+    z-index: 1;
+}
+
+.menu-checkbox {
+    display: none;
+}
+
+.menu-checkbox:checked~.header-menu-list {
+    z-index: 1;
+    opacity: 1;
+    /* transform: translateY(150%); */
+}
+
+.menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
+    opacity: 1;
+}
+
+.header-menu-list {
+    z-index: -1;
+    width: 100%;
+    height: 480px;
+    position: absolute;
+    top: 6rem;
+    left: 0;
+    opacity: 0;
+    transition: all 0.3s linear;
+}
+
+.header-menu-list>nav {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-around;
+    background: var(--fundo-principal);
+    width: 100%;
+    height: 100%;
+    top: 3rem;
+}
+
+.header-menu-list>nav a {
+    text-decoration: none;
+    color: var(--texto);
+}
+
+.header-menu-list-item {
+    font-size: 2.5rem;
+    opacity: 0;
+    transition: all 1.4s linear;
+}
+
+.header-menu-list-item:hover {
+    text-decoration: underline;
 }
 
 
