--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,10 @@ header {
     margin: 0.3rem;
 }
 
-#menu-icon {
+.menu-icon {
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
+    position: sticky;
 }
 
 .menu-checkbox {
@@ -86,29 +87,32 @@ header {
 .menu-checkbox:checked~.header-menu-list {
     z-index: 1;
     opacity: 1;
-    /* transform: translateY(150%); */
+    transition-duration: 0.2s;
 }
 
 .menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
     opacity: 1;
+    transition-delay: 0.4s;
 }
 
 .header-menu-list {
     z-index: -1;
+    display: flex;
+    justify-content: space-between;
     width: 100%;
-    height: 480px;
-    position: absolute;
-    top: 6rem;
+    height: 100%;
+    position: fixed;
+    top: 0;
     left: 0;
     opacity: 0;
-    transition: all 0.3s linear;
+    transition: all 1s linear;
 }
 
 .header-menu-list>nav {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     background: var(--fundo-principal);
     width: 100%;
     height: 100%;
@@ -123,7 +127,7 @@ header {
 .header-menu-list-item {
     font-size: 2.5rem;
     opacity: 0;
-    transition: all 1.4s linear;
+    transition: all 0.4s linear;
 }
 
 .header-menu-list-item:hover {
