--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,8 @@ h1 {
     font-weight: 500;
 }
 
-section {
+section,
+footer {
     margin: 5rem 0;
 }
 
@@ -218,15 +219,14 @@ header {
 }
 
 .sobre-foto>img {
-    width: 60%;
+    width: 80%;
     height: auto;
-    /* object-fit: cover; */
     margin: 30px 0;
     box-shadow: 5px 5px 20px 0 var(--sombra);
 }
 
 .sobre-texto {
-    width: 70%;
+    width: 79%;
 }
 
 .sobre-texto p {
@@ -253,7 +253,8 @@ header {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-around;
-    width: 90%;
+    line-height: 2rem;
+    width: 85%;
     height: 100%;
     margin: 1rem 0;
 }
@@ -314,4 +315,64 @@ header {
     border-radius: 5px;
     margin: 30px 0;
     box-shadow: 2px 2px 8px 0 var(--sombra);
+}
+
+
+/* CONTATO */
+
+.contato {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    background: var(--fundo);
+}
+
+.contato-video {
+    display: none;
+}
+
+.contato-texto {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    font-style: italic;
+    padding: 2rem 0;
+}
+
+.contato-texto h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 1rem 0;
+}
+
+.contato-texto h2 {
+    font-size: 1.13rem;
+    font-weight: 500;
+    padding: 1rem 0;
+}
+
+.contato-texto h1 {
+    font-size: 1.57rem;
+    font-weight: 600;
+    font-style: normal;
+    padding: 1rem 0;
+}
+
+.contato-texto strong {
+    font-size: 1.55rem;
+}
+
+
+/* FOOTER */
+
+.redes-sociais {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 2.5rem;
 }
