--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ header {
 
 .menu-icon {
     cursor: pointer;
-    z-index: 2;
+    z-index: 20;
     position: sticky;
 }
 
@@ -86,7 +86,7 @@ header {
 }
 
 .menu-checkbox:checked~.header-menu-list {
-    z-index: 1;
+    z-index: 10;
     opacity: 1;
     transition-duration: 0.2s;
 }
@@ -94,10 +94,11 @@ header {
 .menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
     opacity: 1;
     transition-delay: 0.4s;
+    z-index: 10;
 }
 
 .header-menu-list {
-    z-index: -1;
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -146,6 +147,8 @@ header {
     width: 100%;
     height: fit-content;
     padding: 0.5rem 1rem;
+    position: static;
+    z-index: 0;
 }
 
 
@@ -175,18 +178,23 @@ header {
 /* CARROSSEL */
 
 .inicio-carrossel {
-    display: flex;
+    /* display: flex;
     flex-flow: column nowrap;
-    align-items: center;
-    margin: 1rem 0;
+    align-items: center; */
+    margin: 2rem 0;
+    width: 100%;
+    position: static;
+    z-index: 0;
 }
 
-.inicio-carrossel>img {
-    width: 85%;
+.inicio-carrossel img {
+    width: 95%;
     height: auto;
-    border-radius: 5px;
-    margin: 30px 0;
+    border-radius: 6px;
+    margin: 0.75rem;
     box-shadow: 2px 2px 8px 0 var(--sombra);
+    position: static;
+    z-index: 0;
 }
 
 
