--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,22 +14,49 @@
     --sombra: rgba(0, 0, 0, 0.5);
 }
 
+@media(min-width: 1080px) {
+    html {
+        font-size: 93.75%;
+    }
+}
+
+@media(min-width: 768px) {
+    html {
+        font-size: 87.5%;
+    }
+}
+
 body {
     background: var(--fundo-principal);
     color: var(--texto);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
+}
+
+body,
+input,
+textarea,
+button {
+    font: 400 1rem "Montserrat", sans-serif;
+}
+
+button {
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     font-size: 1.75rem;
     font-weight: 500;
 }
 
 section,
 footer {
-    margin: 5rem 0;
+    padding: 7rem 0;
+    margin: 2.5rem 0;
 }
 
 
@@ -50,12 +77,20 @@ header {
 
 /* LOGO */
 
+.header-destaque {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .header-logo {
     background: rgba(0, 0, 0, 0.06);
-    font-family: 'MrDeHaviland-Regular';
-    font-size: 30px;
-    text-align: left;
-    height: 74px;
+    width: 3.5rem;
+    height: 3.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-shadow: 1px 1px 2px var(--sombra);
     border-radius: 100%;
     padding: 20px;
@@ -63,15 +98,30 @@ header {
 }
 
 .header-logo>p {
-    transform: translate(-2px, 2px);
+    font-family: 'MrDeHaviland-Regular';
+    font-size: 1.5rem;
+    text-align: left;
+    text-decoration: none;
+    width: 100%;
+    height: auto;
+    transform: translate(-4px, 2px);
+}
+
+.header-logo>a:hover {
+    cursor: pointer;
+}
+
+.header-titulo {
+    font-size: 2.5rem;
+    font-family: 'MrDeHaviland-Regular';
+    display: none;
 }
 
 
 /* MENU */
 
 .header-menu {
-    font-size: 2.5rem;
-    padding: 15px;
+    padding: 1rem;
     margin: 0.3rem;
 }
 
@@ -85,22 +135,8 @@ header {
     display: none;
 }
 
-.menu-checkbox:checked~.header-menu-list {
-    z-index: 10;
-    opacity: 1;
-    transition-duration: 0.2s;
-}
-
-.menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
-    opacity: 1;
-    transition-delay: 0.4s;
-    z-index: 10;
-}
-
 .header-menu-list {
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
+    z-index: -1;
     width: 100%;
     height: 100%;
     position: fixed;
@@ -119,21 +155,33 @@ header {
     width: 100%;
     height: 100%;
     top: 3rem;
-}
-
-.header-menu-list>nav a {
-    text-decoration: none;
-    color: var(--texto);
+    visibility: hidden;
 }
 
 .header-menu-list-item {
-    font-size: 2.5rem;
+    font-size: 2rem;
     opacity: 0;
     transition: all 0.4s linear;
+    visibility: inherit;
 }
 
 .header-menu-list-item:hover {
     text-decoration: underline;
+}
+
+.menu-checkbox:checked~.header-menu-list {
+    z-index: 1;
+    opacity: 1;
+    transition-duration: 0.2s;
+}
+
+.menu-checkbox:checked~.header-menu-list nav {
+    visibility: visible;
+}
+
+.menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
+    opacity: 1;
+    transition-delay: 0.4s;
 }
 
 
@@ -146,9 +194,6 @@ header {
     justify-content: space-between;
     width: 100%;
     height: fit-content;
-    padding: 0.5rem 1rem;
-    position: static;
-    z-index: 0;
 }
 
 
@@ -157,19 +202,20 @@ header {
 .inicio-logo {
     font-family: 'AbhayaLibre';
     width: 100%;
+    height: auto;
     text-align: center;
     padding: 0.3rem;
     margin: 0.5rem;
 }
 
 .inicio-logo p:first-child {
-    font-size: 2.1rem;
+    font-size: 2.2rem;
     font-weight: 800;
     text-decoration: underline;
 }
 
 .inicio-logo p:last-child {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     letter-spacing: 0.4rem;
 }
@@ -178,13 +224,9 @@ header {
 /* CARROSSEL */
 
 .inicio-carrossel {
-    /* display: flex;
-    flex-flow: column nowrap;
-    align-items: center; */
     margin: 2rem 0;
     width: 100%;
-    position: static;
-    z-index: 0;
+    display: none;
 }
 
 .inicio-carrossel img {
@@ -193,19 +235,20 @@ header {
     border-radius: 6px;
     margin: 0.75rem;
     box-shadow: 2px 2px 8px 0 var(--sombra);
-    position: static;
-    z-index: 0;
 }
 
+.inicio-mobile {
+    margin: 2rem 0;
+    width: 100%;
+}
 
-/* .inicio-carrossel-linha {
-    background: var(--linhas);
+.inicio-mobile img {
     width: 95%;
-    border: 1px solid var(--linhas);
-    filter: blur(2px);
-    transform: skewX(-50deg);
-    margin: 1rem auto;
-} */
+    height: auto;
+    border-radius: 6px;
+    margin: 0.75rem;
+    box-shadow: 2px 2px 8px 0 var(--sombra);
+}
 
 
 /* SOBRE */
@@ -375,7 +418,7 @@ header {
 }
 
 
-/* FOOTER */
+/* RODAPE */
 
 .redes-sociais {
     display: flex;
