--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,18 +16,6 @@
     --sombra: rgba(0, 0, 0, 0.5);
 }
 
-@media(min-width: 1080px) {
-    html {
-        font-size: 93.75%;
-    }
-}
-
-@media(min-width: 768px) {
-    html {
-        font-size: 87.5%;
-    }
-}
-
 body {
     background: var(--fundo-principal);
     color: var(--texto);
@@ -247,6 +235,7 @@ header>a {
 .inicio-carrossel img {
     border-radius: 6px;
     box-shadow: 2px 2px 8px 0 var(--sombra);
+    margin-top: 5rem;
     /* margin: 0.75rem; */
 }
 
@@ -430,4 +419,87 @@ header>a {
     align-items: center;
     justify-content: space-evenly;
     font-size: 2.5rem;
+}
+
+
+/* RESPONSIVO PARA TABLET 768 */
+
+@media(min-width: 768px) {
+    html {
+        font-size: 87.5%;
+    }
+    /* CABEÇALHO */
+    .header-titulo {
+        display: inline;
+    }
+    .header-titulo:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+    .header-logo>p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(1%);
+    }
+    /* MENU */
+    .menu-icon {
+        display: none;
+    }
+    .header-menu-list {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        position: relative;
+        opacity: 1;
+        z-index: 10;
+    }
+    .header-menu-list>nav {
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+        visibility: visible;
+    }
+    .header-menu-list>nav a .header-menu-list-item {
+        font-size: 1.5rem;
+        opacity: 1;
+        transition-delay: 0.4s;
+        z-index: 10;
+        padding: 0 1rem;
+    }
+    /* INICIO */
+    .inicio-logo p:first-child {
+        font-size: 5rem;
+    }
+    .inicio-logo p:last-child {
+        font-size: 3.8rem;
+    }
+    .inicio-carrossel {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+    .inicio-mobile {
+        display: none;
+    }
+    /* RODAPE */
+    .redes-sociais {
+        font-size: 3.5rem;
+    }
+}
+
+
+/* RESPONSIVO PARA DESKTOP 1080 */
+
+@media(min-width: 1080px) {
+    html {
+        font-size: 93.75%;
+    }
+    /* INICIO */
+    .inicio-logo p:first-child {
+        font-size: 6rem;
+    }
+    .inicio-logo p:last-child {
+        font-size: 4.8rem;
+    }
 }
