--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ header {
     align-items: center;
     border-bottom: var(--linhas) 1px solid;
     position: sticky;
+    z-index: 2;
     top: 0;
     padding: 0.5rem;
 }
@@ -135,7 +136,7 @@ header>a {
     width: fit-content;
     position: sticky;
     cursor: pointer;
-    z-index: 20;
+    z-index: 3;
 }
 
 .menu-checkbox {
@@ -150,7 +151,7 @@ header>a {
     top: 0;
     left: 0;
     opacity: 0;
-    transition: all 1s linear;
+    visibility: hidden;
 }
 
 .header-menu-list nav {
@@ -162,7 +163,6 @@ header>a {
     width: 100%;
     height: 100%;
     top: 3rem;
-    visibility: hidden;
 }
 
 .header-menu-list nav a {
@@ -172,7 +172,6 @@ header>a {
 .header-menu-list-item {
     font-size: 2rem;
     opacity: 0;
-    transition: all 0.4s linear;
     visibility: inherit;
 }
 
@@ -181,18 +180,23 @@ header>a {
 }
 
 .menu-checkbox:checked~.header-menu-list {
-    z-index: 1;
+    visibility: visible;
     opacity: 1;
-    transition-duration: 0.2s;
+    z-index: 2;
+    transition: all 0.2s linear;
 }
 
-.menu-checkbox:checked~.header-menu-list nav {
-    visibility: visible;
+.menu-checkbox:not(:checked)~.header-menu-list {
+    transition: all 0.3s linear 0.3s;
 }
 
 .menu-checkbox:checked~.header-menu-list nav a .header-menu-list-item {
     opacity: 1;
-    transition-delay: 0.4s;
+    transition: all 0.3s linear 0.3s;
+}
+
+.menu-checkbox:not(:checked)~.header-menu-list nav a .header-menu-list-item {
+    transition: all 0.2s linear;
 }
 
 
@@ -230,23 +234,24 @@ header>a {
 
 /* DESTAQUE */
 
-
-/* MOBILE */
-
-.inicio-mobile {
+.inicio-carrossel {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    width: 100%;
+    height: auto;
+    margin: 4rem 0 2rem;
+    position: relative;
+    z-index: 0;
 }
 
-.inicio-mobile img {
+.inicio-carrossel img {
     border-radius: 6px;
     box-shadow: 2px 2px 8px 0 var(--sombra);
-    margin-top: 4rem;
 }
 
-.inicio-carrossel {
-    display: none;
+.slick-slide {
+    margin: 0 0.5rem;
 }
 
 
@@ -477,21 +482,8 @@ header>a {
         font-size: 3.8rem;
     }
     /* DESTAQUE */
-    /* CARROSSEL */
     .inicio-carrossel {
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-        width: 100%;
-        height: auto;
         margin: 6rem 0 2rem;
-    }
-    .inicio-carrossel img {
-        border-radius: 6px;
-        box-shadow: 2px 2px 8px 0 var(--sombra);
-    }
-    .inicio-mobile {
-        display: none;
     }
     /* SOBRE */
     .sobre-texto p {
